@@ -1,12 +1,13 @@
 Package: strucchange
-Version: 1.5-0
-Date: 2013-10-29
+Version: 1.5-1
+Date: 2015-06-06
 Title: Testing, Monitoring, and Dating Structural Changes
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Friedrich", family = "Leisch", role = "aut", email = "Friedrich.Leisch@R-project.org"),
              person(given = "Kurt", family = "Hornik", role = "aut", email = "Kurt.Hornik@R-project.org"),
 	     person(given = "Christian", family = "Kleiber", role = "aut", email = "Christian.Kleiber@unibas.ch"),
-	     person(given = "Bruce", family = "Hansen", role = "ctb"))
+	     person(given = "Bruce", family = "Hansen", role = "ctb"),
+	     person(give = c("Edgar", "C."), family = "Merkle", role = "ctb"))
 Description: Testing, monitoring and dating structural changes in (linear)
              regression models. strucchange features tests/methods from
 	     the generalized fluctuation test framework as well as from
@@ -22,4 +23,4 @@ LazyData: yes
 Depends: R (>= 2.10.0), zoo, sandwich
 Suggests: stats4, car, dynlm, e1071, foreach, lmtest, mvtnorm, tseries
 Imports: graphics, stats
-License: GPL-2
+License: GPL-2 | GPL-3
