@@ -4,6 +4,11 @@ Changes in Version 1.5-1
     which is much faster, making the computation of p values and critical values
     for the ordinal maxLM statistic much faster and feasible "on the fly".
 
+  o Reduced number of significant digits in breakpoints summary to
+    getOption("digits") - 3.
+
+  o Reference output updated for recent versions of R.
+
 
 Changes in Version 1.5-0
 
